...
        ),
      }}
    >
      <Tabs.Screen
        name="matches"
        options={{
          title: t("Matches"),
          headerTitle: () => <HeaderTitle title={t("Matches")} icon={Dices} />,
          tabBarIcon: ({ color }) => <Dices size={26} color={color} />,
        }}
      />
      <Tabs.Screen
        name="groups"
...
